estados do jogo

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -20,11 +20,13 @@ h1,h2, h3, button, form {
 
 
 .wordContainer{
-    margin: 1.Sem;
-    padding: 1.Sem;
+    padding: 1rem;
     border: 12px solid #ecfa00;
     border-radius: 20px;
+    width: 800px;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .letter,
